--- a/telas_ofc/teste-contato.html
+++ b/telas_ofc/teste-contato.html
@@ -1,183 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         body {
-            font-family: 'Ubuntu', sans-serif;
-            background-color: #f8f9fa;
-            margin: 0;
-            padding: 0;
+            font-family: Arial, sans-serif;
         }
-
-        header {
-            background-color: #343a40;
-            padding: 10px 0;
-        }
-
-        .navbar-brand img {
-            width: 150px;
-        }
-
-        .nav-link {
-            color: #fff !important;
-            margin-right: 15px;
-        }
-
-        .nav-link:hover {
-            text-decoration: underline;
-        }
-
-        .header-title {
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-            font-size: 2.5rem;
-            font-weight: 700;
-        }
-
-        .contact-section {
-            padding: 40px 0;
-        }
-
-        .contact-section h2 {
-            font-size: 2rem;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        .social-icons a {
-            margin: 0 10px;
-            font-size: 2rem;
-            color: #fff;
-            padding: 10px;
-            border-radius: 50%;
-        }
-
-        footer {
-            background-color: #343a40;
-            color: #fff;
-            text-align: center;
-            padding: 15px 0;
-        }
-
-        footer p {
-            margin: 0;
-        }
-
-        .form-container {
-            background-color: #fff;
-            border-radius: 8px;
+        .header {
+            background-color: #4CAF50;
             padding: 20px;
+            color: white;
+            text-align: center;
+        }
+        .nav-links a {
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+        .nav-links a:hover {
+            background-color: #45a049;
+        }
+        .contact-section {
+            background-image: url('path/to/image.jpg');
+            background-size: cover;
+            background-position: center;
+            padding: 60px 0;
+            color: white;
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+        .form-container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 700px;
+            margin: auto;
         }
 
-        .form-label {
-            font-weight: bold;
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            border: none;
-        }
-
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
     </style>
 </head>
-
 <body>
-
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="home-2.html">
-                    <img src="img/Logo Passatempo.png" alt="Logo Passatempo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="home-2.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="oficinas-2.html">Oficinas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="eventos-2.html">Eventos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a></li>
-                        <li class="nav-item"><a class="nav-link" href="galeria-2.html">Galeria</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="contato-2.html">Contato</a></li>
-                        <li class="nav-item"><a class="nav-link" href="admin-2.html">Admin</a></li>
-                    </ul>
+    
+    <div class="contact-section">
+        <h1>Entre em Contato</h1>
+        <p>Estamos aqui para ajudar. Preencha o formulário abaixo e entraremos em contato em breve.</p>
+        <div class="form-container">
+            <form>
+                <div class="form-group">
+                    <label for="name">Nome</label>
+                    <input type="text" class="form-control" id="name" placeholder="Primeiro Nome">
                 </div>
-            </div>
-        </nav>
-        <h1 class="header-title">Contato</h1>
-    </header>
-
-    <section class="contact-section">
-        <div class="container">
-            <h2>Fale Conosco</h2>
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="form-container">
-                        <form action="#" method="POST">
-                            <div class="mb-3">
-                                <label for="name" class="form-label">Nome</label>
-                                <input type="text" id="name" name="name" class="form-control" placeholder="Seu nome" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">E-mail</label>
-                                <input type="email" id="email" name="email" class="form-control" placeholder="Seu e-mail"
-                                    required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="subject" class="form-label">Assunto</label>
-                                <input type="text" id="subject" name="subject" class="form-control" placeholder="Assunto"
-                                    required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="message" class="form-label">Mensagem</label>
-                                <textarea id="message" name="message" class="form-control" rows="5"
-                                    placeholder="Digite sua mensagem aqui" required></textarea>
-                            </div>
-                            <div class="d-grid">
-                                <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
-                            </div>
-                        </form>
-                    </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com">
                 </div>
-            </div>
-            <div class="text-center mt-4">
-                <p>Siga-nos também nas redes sociais:</p>
-                <div class="social-icons">
-                    <a href="#" class="facebook" aria-label="Facebook">
-                        <i class="bi bi-facebook"></i>
-                    </a>
-                    <a href="#" class="whatsapp" aria-label="WhatsApp">
-                        <i class="bi bi-whatsapp"></i>
-                    </a>
-                    <a href="#" class="instagram" aria-label="Instagram">
-                        <i class="bi bi-instagram"></i>
-                    </a>
+                <div class="form-group">
+                    <label for="telefone">Telefone</label>
+                    <input type="tel" class="form-control" id="telefone" placeholder="Telefone">
                 </div>
-            </div>
+                <div class="form-group">
+                    <label for="data_evento">Data do Evento</label>
+                    <input type="date" class="form-control" id="data_evento" required>
+                </div>
+                <div class="form-group">
+                    <label for="tipo_evento">Tipo do Evento</label>
+                    <select class="form-control" id="tipo_evento">
+                        <option selected>Selecione um evento</option>
+                        <option value="1">Eventos Corporativo</option>
+                        <option value="2">Eventos Social</option>
+                        <option value="3">Oficinas</option>
+                        <option value="4">Saude e Bem Estar</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="quantidade">Quantidade de Pessoas</label>
+                    <input type="number" class="form-control" id="quantidade" placeholder="Quantidade de pessoas">
+                </div>
+                <div class="form-group">
+                    <label for="idade_aniversariante">Idade do Aniversariante</label>
+                    <input type="number" class="form-control" id="idade_aniversariante" placeholder="Idade do Aniversariante">
+                </div>
+                <div class="form-group">
+                    <label for="mensagem">Mensagem</label>
+                    <textarea class="form-control" id="mensagem" rows="3" placeholder="Sua mensagem"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary" style="background-color: #4CAF50; color: white; border-radius: 5px;">Enviar</button>
+            </form>
         </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Passatempo. Todos os direitos reservados.</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-hwdgXmAdGtBQ9WA6yy96+2TT2+1Z9sOGy8HbPqjLrCBVBsIMIaP9FukaQ8WAjtzz" crossorigin="anonymous"></script>
+    </div>
+ 
 </body>
-
 </html>
