--- a/telas_ofc/galeria-teste2.html
+++ b/telas_ofc/galeria-teste2.html
@@ -58,7 +58,37 @@ h1 {
 .show {
   display: block;
 }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+ }
 
+.modal img {
+    max-width: 90%;
+    max-height: 90%;
+    width: 70%;
+    height: auto;
+    border: 3px solid white;
+    border-radius: 10px;
+}
+
+.modal .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+    background-color: red;
+}
 /* Style the buttons */
 .btn {
   border: none;
@@ -76,6 +106,19 @@ h1 {
   background-color: #666;
   color: white;
 }
+@media (max-width: 768px) {
+  #myBtnContainer {
+      flex-direction: column;
+      align-items: center; 
+      gap: 10px; 
+  }
+  
+  .btn {
+      width: 100%; 
+      text-align: center; 
+      padding: 15px 0; 
+    }
+  }
 </style>
 </head>
 <body>
@@ -99,22 +142,19 @@ h1 {
 <div class="row">
   <div class="column nature">
     <div class="content">
-      <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
-      <h4>Mountains</h4>
+      <img src="img/coloque_imagem.PNG" alt="Mountains" style="width:100%"  onclick="openModal(this.src)">
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
-    <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
-      <h4>Lights</h4>
+      <img src="img/coloque_imagem.PNG" alt="Mountains" style="width:100%"  onclick="openModal(this.src)">
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
   <div class="column nature">
     <div class="content">
-    <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
-      <h4>Forest</h4>
+      <img src="img/coloque_imagem.PNG" alt="Mountains" style="width:100%"  onclick="openModal(this.src)">
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
@@ -164,6 +204,10 @@ h1 {
   </div>
 <!-- END GRID -->
 </div>
+<div id="imageModal" class="modal">
+  <span class="close" onclick="closeModal()">&times;</span>
+  <img id="modalImage" src="" alt="Imagem Ampliada">
+</div>
 
 <!-- END MAIN -->
 </div>
@@ -212,6 +256,17 @@ for (var i = 0; i < btns.length; i++) {
     this.className += " active";
   });
 }
+function openModal(imageSrc) {
+            const modal = document.getElementById('imageModal');
+            const modalImage = document.getElementById('modalImage');
+            modalImage.src = imageSrc;
+            modal.style.display = 'flex';
+        }
+
+        function closeModal() {
+            const modal = document.getElementById('imageModal');
+            modal.style.display = 'none';
+        }
 </script>
 
 </body>
