--- a/prototipos/front/index.html
+++ b/prototipos/front/index.html
@@ -23,6 +23,11 @@
                 <div class="modal-footer">
                     <button class="btn btn-secondary btn-lg" data-bs-dismiss="modal" aria-label="close" onclick="dropImagens()">Fechar</button>
                     <button class="btn btn-primary btn-lg" onclick="selecionarImagem()">Selecionar</button>
+                    <button class="btn btn-danger btn-lg" onclick="removerImagem()">Remover</button>
+                    <form id="form">
+                        <label for="file" class="custom-file-button" id="botaoUpload">Upload</label>
+                        <input type="file" id="file">
+                    </form>
                 </div>
             </div>
         </div>
