--- a/telas_ofc/eventos-2.html
+++ b/telas_ofc/eventos-2.html
@@ -184,7 +184,8 @@
 
       <div class="container-fluid ">
         <!-- alinhamento dos cards -->
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-4 g-4 mx-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-3 g-4 mx-4">
+          
           <!-- card 1 -->
           <div class="col">
             <div class="card h-100 text-center">
