--- a/telas_finais/footer.html
+++ b/telas_finais/footer.html
@@ -18,17 +18,22 @@
 </head>
 <body>
 
+
+   
     <footer class="fixed">
         <div class="container-fluid rodape">
-            <div class="row justify-content-around align-items-center  g-3">
-                <!-- col botao contato -->
-                <a class="btn botao_contate_footer col-8 col-sm-6 col-md-5 col-lg-3 " href="contato.html">
-                    <div class="texto-botao">Contate-nos</div>
-                </a>
+            <div class="row justify-content-around align-items-center row_rodape g-3">
+                <!-- col com botao contate -->
 
+                <div class="col-10 col-sm-8 col-md-5 col-lg-3 div_contate">
+                    <a class="btn botao_contate_footer w-100" href="contato.html">
+                        <div class="texto-botao">Contate-nos</div>
+                    </a>
+                </div>
+                
                 <!-- col com as redes sociais -->
-                <div class="col-sm-8 col-md-8 col-lg-4 redes_footer ">
-                    <div>
+                <div class="col-sm-8 col-md-8 col-lg-5 redes_footer ">
+                    <div class="div_redes">
                         <a href="https://www.facebook.com/Passatempoedu/" class="btn rede_footer"  aria-pressed="true">
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16" >
                                 <title>Facebook</title>
@@ -64,7 +69,7 @@
                         
                 <!-- col com os direitos autorais -->
                 <div class="col-sm-12 col-md-8 col-lg-3 direitos_footer">
-                    <div><p>&copy; 2024 passatempoeducativo.org.br </p></div>
+                    &copy; 2024 passatempoeducativo.org.br
                 </div>
             </div>
         </div>
