--- a/telas_ofc/navbar_adm.html
+++ b/telas_ofc/navbar_adm.html
@@ -38,7 +38,7 @@
                 <a class="nav-link navegacao_link" href="eventos.html">Eventos Sociais</a>
               </li>
               <li class="nav-item navegacao_item">
-                <a class="nav-link navegacao_link" href="eventos.html">Eventos Corporativos</a>
+                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
               </li>
               <li class="nav-item navegacao_item">
                 <a class="nav-link navegacao_link" href="saudeBemEstar.html">Saúde e Bem-Estar</a>
