--- a/telas_ofc/eventos-2.html
+++ b/telas_ofc/eventos-2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/eventos-2.css">
     <link rel="stylesheet" href="styles/navbar-2.css">
     <link rel="stylesheet" href="styles/footer.css">
-
+    <link rel="stylesheet" href="styles/modal.css">
  
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
         rel="stylesheet">
 
 </head>
-<body>
+<body onload="obterDados()">
 
     <!--  começo vlibras  -->
     <div vw class="enabled">
@@ -366,7 +366,10 @@
   </footer>
 
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="../js/eventos.js"></script>
+  <script src="../js/modal.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </body>
 </html>
