--- a/telas_ofc/galeria-2.html
+++ b/telas_ofc/galeria-2.html
@@ -309,5 +309,8 @@
     </script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/galeria.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </body>
 </html>
