--- a/telas_ofc/home-2.html
+++ b/telas_ofc/home-2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/menu-2.css">
     <link rel="stylesheet" href="styles/navbar-2.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/modal.css">
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,7 +25,27 @@
 </head>
 
 <body onload="obterDados()">
-
+    <div class="modal modal-lg fade" id="modalFotos" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="modalFotos" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-4">Fotos</h1>
+                </div>
+                <div class="modal-body" id="corpoModalFotos">
+                    
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary btn-lg" data-bs-dismiss="modal" aria-label="close" onclick="dropImagens()">Fechar</button>
+                    <button class="btn btn-primary btn-lg" onclick="selecionarImagem()">Selecionar</button>
+                    <button class="btn btn-danger btn-lg" onclick="removerImagem()">Remover</button>
+                    <form id="form">
+                        <label for="file" class="custom-file-button" id="botaoUpload">Upload</label>
+                        <input type="file" id="file">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--  começo vlibras  -->
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
@@ -203,13 +224,13 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="d-block w-100" alt="..." id="imagem0">
+                        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="d-block w-100" alt="..." id="">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="d-block w-100 " alt="..." id="imagem0">
+                        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="d-block w-100 " alt="..." id="">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="d-block w-100 " alt="..." id="imagem0">
+                        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="d-block w-100 " alt="..." id="">
                     </div>
                     </div>
                 </div>
@@ -339,7 +360,7 @@
 
 <!-- footer -->
 
-    
+<button class="btn btn-outline-success w-100 d-none" id="botaoCadastro" onclick="salvarMudancas()">Salvar Mudanças</button>
 
 <footer class="fixed">
     <div class="container-fluid rodape">
@@ -395,6 +416,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="../js/home.js"></script>
+    <script src="../js/modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </body>
