--- a/telas_ofc/oficinas-2.html
+++ b/telas_ofc/oficinas-2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/oficinas-2.css">
     <link rel="stylesheet" href="styles/navbar-2.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/modal.css">
 
 
 
@@ -26,7 +27,7 @@
     <style></style>
 </head>
 
-<body>
+<body onload="obterDados()">
 
     <!--  começo vlibras  -->
     <div vw class="enabled">
@@ -343,6 +344,9 @@
       
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../js/oficinas.js"></script>
+    <script src="../js/modal.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </body>
 
