--- a/telas_ofc/saudeBemEstar-2.html
+++ b/telas_ofc/saudeBemEstar-2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/navbar-2.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/saude-2.css">
+    <link rel="stylesheet" href="styles/modal.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -21,7 +22,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body onload="obterDados()">
 
     <!--  começo vlibras  -->
     <div vw class="enabled">
@@ -242,6 +243,9 @@
  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../js/saudeBemEstar.js"></script>
+    <script src="../js/modal.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <body>
 
