--- a/telas_finais/tela_admin.html
+++ b/telas_finais/tela_admin.html
@@ -91,16 +91,18 @@
 
     <article class="container-fluid area-admin text-center py-4">
 
-        <header class="row justify-content-center">
-            <div class="col-sm-12 col-md-10 border bg-secondary">
-                <h1 class="texto_bemV">Bem Vindo Admin </h1>
+        <header class="row justify-content-center mb-4">
+            <div class="col-sm-12 col-md-10 col_texto">
+                <span><img src="image/logo_passatempo_digital.png" class="logo_header"></span> 
+                <h1 class="texto_bemV">Seja Bem Vindo Admin</h1>
 
-                <h2 class="texto_modoA">Você está no Modo Administrador</h2>  
+                <p class="texto_modoA">Agora você está no <b>Modo Administrador</b>:</p>  
+                <p class="texto_intro"> Escolha uma das opções abaixo ou navegue entre as telas para editá-las</p>
             </div>
         </header>
 
         <main>
-            <div class="row d-flex justify-content-between row_cards g-3">
+            <div class="row d-flex justify-content-between row_cards mt-4 g-3">
                 <!-- Tutorial Admin Button -->
                 <div class="col-1"></div>
                 <div class="col-sm-12 col-lg-3 col_card1">
