--- a/telas_finais/add_img.html
+++ b/telas_finais/add_img.html
@@ -27,40 +27,55 @@
         <nav class="navbar navbar-expand-lg fixed">
             <div class="container-fluid">
                 <div>
-                    <img src="image/Logo Passatempo.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
+                    <img src="image/logo_passatempo_digital.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
                 </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
+                    </div>  
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
                             <li class="nav-item text-top">
-                                <a class="nav-link navegacao_link" aria-current="page" href="home-2.html">Home</a>
+                                <a class="nav-link active navegacao_link" aria-current="page" href="menu-2.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Sociais</a>
+                                <a class="nav-link navegacao_link" href="eventos.html">Eventos Sociais</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Corporativos</a>
+                                <a class="nav-link navegacao_link" href="saudeBemEstar.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link " href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
+                                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link " href="contato-2.html">Contato</a>
+                                <a class="nav-link navegacao_link" href="contato.html">Contato</a>
                             </li>
-                            <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link active" href="admin-2.html">Admin</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Toggle perfil">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+                                </svg>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-lg-end " aria-labelledby="navbarDropdown">
+                                    <li>
+                                        <a class="dropdown-item" href="#">
+                                            <div class="sair">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-box-arrow-right m-3" viewBox="0 0 16 16" aria-hidden="true">
+                                                <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
+                                                <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+                                                </svg>
+                                                Sair
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
                     </div>
@@ -68,6 +83,8 @@
             </div>
         </nav>
     </header>
+
+    
     <div class="container-fluid d-flex flex-column align-items-center add_img justify-content-center">
         <img src="image/logo_passatempo_digital.png" alt="Logo Passatempo" id="logo2" class="mb-3 mt-5">
 
