--- a/telas_finais/contato.html
+++ b/telas_finais/contato.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
-    <link rel="stylesheet" href="style_contato.css">
-    <link rel="stylesheet" href="style_navbar.css">
+    <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/navbar.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -41,40 +41,38 @@
         <nav class="navbar navbar-expand-lg fixed">
             <div class="container-fluid">
                 <div>
-                    <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
+                    <img src="image/logo_passatempo_digital.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
                 </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
+                    </div>  
                     <div class="offcanvas-body">
-                        <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
-                            <li class="nav-item text-top">
-                                <a class="nav-link navegacao_link" aria-current="page" href="home-2.html">Home</a>
+                        <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
+                            <li class="nav-item  navegacao_item">
+                                <a class="nav-link navegacao_link" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
+                                <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos</a>
+                                <a class="nav-link navegacao_link" href="eventos.html">Eventos</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
+                                <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria-2.html">Galeria</a>
+                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link  active" href="contato-2.html">Contato</a>
+                                <a class="nav-link navegacao_link active" href="contato.html">Contato</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="admin-2.html">Admin</a>
+                                <a class="nav-link navegacao_link" href="login.html">Admin</a>
                             </li>
                         </ul>
                     </div>
