--- a/telas_finais/saude.html
+++ b/telas_finais/saude.html
@@ -7,7 +7,7 @@
     <title>Saúde e Bem estar</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="style_saude.css">
+    <link rel="stylesheet" href="css/saude.css">
     <link rel="stylesheet" href="styles/modal.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
